layout  hover op balk boven ronder

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -141,6 +141,7 @@ html(lang='en')
             .w3-bar .w3-bar-item:hover {
                 background-color: #333 !important;
                 color:white !important;
+                border-radius: 10px;
             }
 
             .hero {
