--- a/views/edit_profile.pug
+++ b/views/edit_profile.pug
@@ -1,19 +1,52 @@
 extends layout
 
 block content
-    h1= title
-    form(action='/user/profile/edit', method='post', enctype='multipart/form-data')
-        div
-            label(for='username') Username:
-            input(type='text', name='username', id='username', value=user.username)
-        div
-            label(for='email') Email:
-            input(type='email', name='email', id='email', value=user.email)
-        div
-            label(for='password') Password:
-            input(type='password', name='password', id='password')
-        div
-            label(for='profilePicture') Profile Picture:
-            input(type='file', name='profilePicture', id='profilePicture')
-        div
-            button(type='submit') Update Profile
+  div(class='w3-container w3-padding-large')
+    form(method='POST', action='/user/profile/edit', enctype='multipart/form-data', style='max-width: 600px; margin: 0 auto; padding: 20px; border: 2px solid #333; border-radius: 10px; background-color: #333; text-align: center;')
+      h1= title
+
+      // Username input field
+      div.form-group(style='margin-bottom: 20px;')
+        label(for='username', style='display: block; margin-bottom: 5px;') Username:
+        input.w3-input.w3-border.w3-round-large#username.form-control(type='text', name='username', required value=user.username, placeholder='Enter your username', style='width: 100%;')
+
+      // Email input field
+      div.form-group(style='margin-bottom: 20px;')
+        label(for='email', style='display: block; margin-bottom: 5px;') Email:
+        input.w3-input.w3-border.w3-round-large#email.form-control(type='email', name='email', required value=user.email, placeholder='Enter your email', style='width: 100%;')
+
+      // Password input field
+      div.form-group(style='margin-bottom: 20px;')
+        label(for='password', style='display: block; margin-bottom: 5px;') Password:
+        input.w3-input.w3-border.w3-round-large#password.form-control(type='password', name='password', placeholder='Enter your password', style='width: 100%;')
+
+      // Profile picture upload field
+      div.form-group(style='margin-bottom: 20px;')
+        label(for='profilePicture', style='display: block; margin-bottom: 5px;') Profile Picture:
+        input.w3-input.w3-border.w3-round-large#profilePicture.form-control(type='file', name='profilePicture', style='width: 100%;')
+
+      // Submit button
+      button.w3-button.w3-blue.w3-hover-light-blue.w3-round-large(type='submit') Update Profile
+
+  // Error display if any
+  if errors
+    ul(style='color: red;')
+      each error in errors
+        li= error.msg
+
+  style.
+    form label {
+    font-size: 1.2rem;
+    margin-bottom: 0.5rem;
+    display: block;
+    }
+
+    .form-group {
+        margin-bottom: 20px;
+    }
+
+    button[type='submit'] {
+        width: 100%;
+        padding: 10px;
+        font-size: 1.2rem;
+    }
