--- a/views/privacy_policy.pug
+++ b/views/privacy_policy.pug
@@ -46,4 +46,4 @@ block content
 
         h2 Contact Us
         p For questions about your data or this policy, contact us at
-        a(href='mailto:privacy@example.com') privacy@example.com.
+        a(href='mailto:feniks.desmet@student.kuleuven.be') feniks.desmet@student.kuleuven.be.
