--- a/views/terms_of_service.pug
+++ b/views/terms_of_service.pug
@@ -26,4 +26,4 @@ block content
 
         h2 Contact Us
         p For any questions regarding these terms, contact us at
-        a(href='mailto:feniksdesmet@yahoo.com') feniksdesmet@yahoo.com.
+        a(href='mailto:feniks.desmet@student.kuleuven.be') feniks.desmet@student.kuleuven.be.
