--- a/views/index.pug
+++ b/views/index.pug
@@ -1,6 +1,11 @@
 extends layout
 
 block content
+    style.
+        body, html {
+            margin: 0;
+            padding: 0;
+        }
     .hero
         .hero-text
             h1 GamersDen
