--- a/views/login.pug
+++ b/views/login.pug
@@ -93,7 +93,7 @@ block content
 
 
 
-        .login-container
+        .login-container.w3-display-middle
             .login-form
 
                 h1 Login
