--- a/views/logout.pug
+++ b/views/logout.pug
@@ -1,7 +1,8 @@
 extends layout
 
 block content
-    .logout-container
+    .logout-container.w3-display-middle
+
         .logout-form
             h1 #{title}
             p Do you really want to logout?
