--- a/views/privacy_policy.pug
+++ b/views/privacy_policy.pug
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-    .w3-container
+    .w3-container.w3-display-middle
         h1.w3-center Privacy Policy
         p This Privacy Policy outlines how we collect, use, and protect your personal information in compliance with GDPR.
 
