--- a/views/profile.pug
+++ b/views/profile.pug
@@ -1,7 +1,57 @@
 extends layout
 
 block content
-    div(style='display: flex; flex-direction: column; align-items: center; justify-content: center; padding: 20px; text-align: center; background-color: #333; border-radius: 10px;')
+    style.
+        .profile-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            padding: 20px;
+            text-align: center;
+            background-color: #333;
+            border-radius: 10px;
+        }
+
+        .profile-picture {
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            object-fit: cover;
+            border: 3px solid white;
+            margin-bottom: 20px;
+        }
+
+        .user-info {
+            color: #f1f1f1;
+        }
+
+        ul {
+            padding: 0;
+            margin: 10px 0;
+            list-style-type: none;
+        }
+
+        li {
+            margin: 5px 0;
+        }
+
+        .event-link {
+            color: #4f9afa;
+            text-decoration: none;
+            font-weight: bold;
+        }
+
+        .error-message {
+            color: red;
+            font-size: 1.2em;
+        }
+
+        .edit-profile-button {
+            margin-top: 20px;
+        }
+
+    .profile-container
         if user.profilePicture
             img(src=`data:image/png;base64,${user.profilePicture.toString('base64')}`, alt='Profile Picture', style='width: 150px; height: 150px; border-radius: 50%; object-fit: cover; border: 3px solid white; margin-bottom: 20px;')
         else
