--- a/views/register.pug
+++ b/views/register.pug
@@ -89,7 +89,8 @@ block content
                 text-decoration: underline;
             }
 
-        .register-container
+        .register-container.w3-padding-32.w3-display-middle
+
             .register-form
                 h1 Register
                 if error
