--- a/views/privacy_policy.pug
+++ b/views/privacy_policy.pug
@@ -1,8 +1,62 @@
 extends layout
 
 block content
-    .w3-container.w3-display-middle
-        h1.w3-center Privacy Policy
+    style.
+        .privacy-container {
+            max-width: 800px;
+            margin: 20px auto;
+            padding: 60px;
+            background: #333;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            font-family: Arial, sans-serif;
+            color: #fff; /* Set text color to white */
+            text-align: center; /* Center all text */
+
+        }
+
+        .privacy-container h1 {
+            text-align: center;
+            font-size: 2.5rem;
+            margin-bottom: 20px;
+        }
+
+        .privacy-container h2 {
+            font-size: 1.8rem;
+            margin-top: 40px;
+            color: #fff; /* Set text color to white */
+        }
+
+        .privacy-container p {
+            font-size: 1.2rem;
+            line-height: 1.6;
+            color: #fff; /* Set text color to white */
+            margin-bottom: 10px;
+        }
+
+        .privacy-container ul {
+            list-style-type: none;
+            padding-left: 20px;
+            margin-bottom: 15px;
+        }
+
+        .privacy-container ul li {
+            font-size: 1.2rem;
+            color: #fff; /* Set text color to white */
+            margin-bottom: 10px;
+        }
+
+        .privacy-container a {
+            color: #2196F3;
+            text-decoration: none;
+        }
+
+        .privacy-container a:hover {
+            text-decoration: underline;
+        }
+
+    .privacy-container.w3-padding-large
+        h1 Privacy Policy
         p This Privacy Policy outlines how we collect, use, and protect your personal information in compliance with GDPR.
 
         h2 Information We Collect
@@ -41,7 +95,7 @@ block content
         p We retain personal data only as long as necessary for the purposes outlined in this Privacy Policy.
 
         h2 Cookies
-        p We use cookies to enhance your experience. You can manage your cookie preferences
+        p We use cookies to enhance your experience.
         a(href='/cookie-policy') here.
 
         h2 Contact Us
