login kleur register button in blauw nu

--- a/views/login.pug
+++ b/views/login.pug
@@ -114,4 +114,4 @@ block content
                     .input-container
                         a.w3-button.w3-red.w3-hover-pink(href="/user/auth/google") Sign in with Google
                     .input-container
-                        a.w3-button.w3-green.w3-hover-light-green(href='/user/register') Register here
+                        a.w3-button.w3-blue.w3-hover-light-blue(href='/user/register') Register here
